--- a/configurations/config.properties
+++ b/configurations/config.properties
@@ -1,6 +1,6 @@
 webURL=http://tutorialsninja.com/demo/
-userName=123123@gmail.com
-password=123123
+userName=*****@gmail.com
+password=*****
 chromepath=./drivers\\chromedriver.exe
 firefoxpath=./drivers\\geckodriver.exe
 iepath=./drivers\\IEDriverServer.exe
